# not

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: deploy-android.yaml  deploy-desktop.yaml  deploy-ios.yaml
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/activity/: page.tsx
app/activity/[id]/: page.tsx
app/activity/components/: activity_detail.tsx
app/components/: layout-with-bottom-bar.tsx
app/create/: page.tsx
app/create-new-wallet/: page.tsx
app/create-new-wallet/done/: page.tsx
app/create-password/: page.tsx
app/deposit/: page.tsx
app/home/: page.tsx
app/home/components/: activity_component.tsx  activity_list_view.tsx  feed.ts  onboarding_card.tsx  onboarding_card_airdrop.tsx  onboarding_card_username.tsx
app/import/: page.tsx
app/import/import-keypairs/: page.tsx
app/onboarding/create-password/: page.tsx
app/onboarding/create-wallet/: page.tsx
app/onboarding/create-wallet-disclaimer/: page.tsx
app/onboarding/import/: page.tsx
app/onboarding/import-keypairs/: page.tsx
app/onboarding/import-wallet/: page.tsx
app/settings/: page.tsx
app/settings/about/: page.tsx
app/settings/app-info/: page.tsx
app/settings/app-preferences/: page.tsx
app/wallet/: page.tsx
app/wallet/components/: active-keypair-selection.tsx  activity_card.tsx  activity_list_view.tsx  transactions.ts  wallet-card.tsx  wallet-settings-seed-phrase-modal.tsx  wallet-token-content.tsx  wallet-token-header.tsx  wallet_card.tsx
app/wallet/settings/: page.tsx
app/wallet/token/: page.tsx
crates/wallet-kit/: .gitignore  Cargo.toml  README.md  uniffi.toml
crates/wallet-kit-test/: .gitignore  Cargo.toml
crates/wallet-kit/src/: balance.rs  derive_keypair.rs  foo.rs  lib.rs  token_info.rs
docs/: android-keystore-encryption.md
lib/: commands.ts
lib/components/: bottom-tab-bar.tsx  create-or-import-wallet-view.tsx  loading-card.tsx  loading.tsx  locked-wallet-view.tsx
lib/context/: app-lock-context.tsx
lib/crate/: generated.ts
lib/store/: generated.ts  store.ts
public/animation/: choose_your_avatar.riv  food_loading_animation.riv
scripts/: decrypt-keystore.sh  encrypt-keystore.sh  publish-android.sh  publish-ios.sh  publish-macos-appstore.sh  test-seeds.txt
scripts/android/: build.gradle.kts  keystore.properties.example
secrets/: upload-keystore.jks.gpg
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Gemfile  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/constants/: address.rs  mod.rs  rpc.rs  store.rs  wallet_key.rs
src-tauri/src/model/: client.rs  keypair.rs  mod.rs  seed.rs  wallet.rs
src-tauri/src/network/: airdrop.rs  check_pubkey.rs  mod.rs
src-tauri/src/setup/: client.rs  commands.rs  mod.rs  store.rs
src-tauri/src/wallet/: balance.rs  check_pubkey.rs  commands.rs  create_wallet.rs  derive_keypair.rs  import_wallet.rs  mod.rs  set_active_keypair.rs  sign.rs  token_info.rs
watchApp/NotWallet Watch App/Main/: TransactionListView.swift
watchApp/NotWallet.xcodeproj/: project.pbxproj
watchGarmin/source/: NotWalletView.mc
watchOSApp/NotWallet Watch App/Main/: TransactionListView.swift
wearOSApp/app/: build.gradle.kts
wearOSApp/app/src/main/: AndroidManifest.xml
wearOSApp/app/src/main/java/xyz/notwallet/NotWallet/presentation/: BachInfoActivity.kt  MainActivity.kt
wearOSApp/app/src/main/java/xyz/notwallet/NotWallet/presentation/components/: PriceGraphView.kt
wearOSApp/app/src/main/java/xyz/notwallet/NotWallet/presentation/theme/: Theme.kt
wearOSApp/app/src/main/java/xyz/notwallet/NotWallet/presentation/transactions/: TransactionDetailActivity.kt  TransactionListActivity.kt
wearOSApp/app/src/main/res/drawable/: splash_icon.xml
wearOSApp/app/src/main/res/values/: strings.xml
wearOSApp/gradle/: libs.versions.toml
