[package]
name = "wallet-kit-test"
version = "0.1.0"
edition = "2021"
description = "Solana toolkit for NotWallet"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_kit_test"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
solana-sdk = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
uniffi = { version = "0.29", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[patch.crates-io]
solana-account = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-clock = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-cpi = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-frozen-abi = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-frozen-abi-macro = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-instruction = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-program-error = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-pubkey = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-rent = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-signature = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-sysvar-id = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
