[package]
name = "wallet_kit"
version = "0.1.0"
edition = "2021"
description = "Solana toolkit for Not Wallet"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_kit"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
solana-sdk = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-program = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
log = "0.4.20"
bip39 = { version = "2", features = ["rand"] }
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[patch.crates-io]
solana-account = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-clock = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-cpi = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-frozen-abi = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-frozen-abi-macro = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-instruction = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-program-error = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-pubkey = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-rent = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-signature = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
solana-sysvar-id = { git = "https://github.com/anza-xyz/solana-sdk", branch = "master" }
